<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_of_products"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/courseImage"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_dmjbemiiiqs_png" />

            <TextView
                android:id="@+id/courseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Радиатор охлаждения"
                android:textColor="@color/white"
                android:layout_margin="10dp"
                android:textSize="20sp">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginStart="40dp"
                    android:text="@string/type_description_of_product"
                    android:textColor="@color/white"
                    android:textSize="10sp">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_price_of_product"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="60dp"
                    android:textSize="10sp">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/description_of_product"
                    android:textColor="@color/white"
                    android:textSize="10sp">
                </TextView>

                <TextView
                    android:id="@+id/courseLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_of_product"
                    android:textColor="@color/white"
                    android:layout_marginStart="20dp"
                    android:textSize="10sp">
                </TextView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>